overflow hidden pdp scroll issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1460,6 +1460,7 @@ aside li {
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   /* border-right: 1px solid #eaeaea; */
   /* overflow: auto; */
 }
